packages/typ/tests/fixtures/diagnostics/0407_modules_opaque_operator_mismatch_01.ml.expected
File "0407_modules_opaque_operator_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0407_modules_opaque_operator_mismatch_01 is not a valid module name.

File "0407_modules_opaque_operator_mismatch_01.ml", line 14, characters 8-22:
14 | let _ = Hidden_alpha.x + 1
             ^^^^^^^^^^^^^^
Error: The value Hidden_alpha.x has type Hidden_alpha.t
       but an expression was expected of type int
